@@ -7,7 +7,7 @@
         <groupId>io.github.rygel</groupId>
         <artifactId>outerstellar-platform-parent</artifactId>
 
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
 
     </parent>
 
@@ -21,6 +21,10 @@
         <dependency>
             <groupId>io.github.rygel</groupId>
             <artifactId>outerstellar-platform-persistence-jooq</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.rygel</groupId>
+            <artifactId>outerstellar-platform-core</artifactId>
         </dependency>
         <dependency>
             <groupId>io.github.rygel</groupId>
@@ -110,7 +114,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>@{argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+                    <argLine>@{argLine} -XX:+EnableDynamicAgentLoading -Xshare:off --add-opens java.base/java.util=ALL-UNNAMED</argLine>
                     <systemPropertyVariables>
                         <java.awt.headless>${desktop.headless}</java.awt.headless>
                         <otel.traces.exporter>none</otel.traces.exporter>
